--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
           </svg>
             </a>
         </div>
-    </div>
+
+        <!-- CONTENEDOR DE NOTIFICACIONES (usado por JS para mostrar mensajes modernos) -->
+    <div id="notificaciones" aria-live="polite" aria-atomic="true"></div>
 
     <script src="Arsene.js"></script>
     <!-- backend -->
